--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="Nithish Kumar">
     <meta property="og:description" content="Nithish Kumar is a Software Engineer based in Glasgow, who specializes in developing applications.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/NithishK5/nithishPortFolio3/master/assets/img/thumbnail.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NithishK5/nithish.github.io/master/assets/img/thumbnail.jpg">
     <meta property="og:url" content="https://nithishk.com">
 
     <meta property="og:site_name" content="Nithish Kumar">
 
     <meta name="twitter:title" content="Nithish Kumar">
     <meta name="twitter:description" content="Nithish Kumar is a Software Engineer based in Glasgow, who specializes in developing applications.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/NithishK5/nithishPortFolio3/master/assets/img/thumbnail.jpg">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/NithishK5/nithish.github.io/master/assets/img/thumbnail.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicons -->
+
     <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link rel="icon" href="https://nithishk.com/favicon.png"/>
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> 
+
 
     <!-- Google Fonts -->
     <link
