--- a/projects/art-store-website.html
+++ b/projects/art-store-website.html
@@ -103,7 +103,7 @@
                 ><i class="bx bx-file-blank"></i> <span>Resume</span></a
               >
             </li>
-           <!-- <li>
+            <!-- <li>
               <a href="../index.html#certifications"
                 ><i class="bx bx-award"></i> <span>Certifications</span></a
               >
@@ -154,14 +154,13 @@
                 class="img-fluid"
                 alt=""
               />
-            
             </div>
 
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Type</strong>: Website Store</li>
-                
+
                 <li>
                   <strong>Repository</strong>:
                   <a
@@ -184,9 +183,7 @@
 
           <div class="portfolio-description">
             <h2>ArtStore Website</h2>
-            <p>
-             An Artstore Website.
-            </p>
+            <p>An Artstore Website.</p>
           </div>
         </div>
       </section>
