--- a/projects/chat-box.html
+++ b/projects/chat-box.html
@@ -103,7 +103,7 @@
                 ><i class="bx bx-file-blank"></i> <span>Resume</span></a
               >
             </li>
-           <!-- <li>
+            <!-- <li>
               <a href="../index.html#certifications"
                 ><i class="bx bx-award"></i> <span>Certifications</span></a
               >
@@ -160,7 +160,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Type</strong>: Chat Application</li>
-                
+
                 <li>
                   <strong>Repository</strong>:
                   <a href="https://github.com/NithishK5/ChatBox" target="_blank"
@@ -169,7 +169,9 @@
                 </li>
                 <li>
                   <strong>Website</strong>:
-                  <a href="https://github.com/NithishK5/ChatBox/blob/master/README.md" target="_blank"
+                  <a
+                    href="https://github.com/NithishK5/ChatBox/blob/master/README.md"
+                    target="_blank"
                     >Documentation</a
                   >
                 </li>
@@ -179,9 +181,7 @@
 
           <div class="portfolio-description">
             <h2>Chat Box</h2>
-            <p>
-              ChatBox is a real time chat application.
-            </p>
+            <p>ChatBox is a real time chat application.</p>
           </div>
         </div>
       </section>
