--- a/projects/multiplayer-snake-game.html
+++ b/projects/multiplayer-snake-game.html
@@ -103,7 +103,7 @@
                 ><i class="bx bx-file-blank"></i> <span>Resume</span></a
               >
             </li>
-             <!-- <li>
+            <!-- <li>
              <a href="../index.html#certifications"
                 ><i class="bx bx-award"></i> <span>Certifications</span></a
               >
@@ -160,7 +160,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Type</strong>: Game</li>
-                
+
                 <li>
                   <strong>Repository</strong>:
                   <a
@@ -183,9 +183,7 @@
 
           <div class="portfolio-description">
             <h2>Multiplayer Snake Game</h2>
-            <p>
-              A Snake Game to play with your friends online.
-            </p>
+            <p>A Snake Game to play with your friends online.</p>
           </div>
         </div>
       </section>
