--- a/projects/pacman.html
+++ b/projects/pacman.html
@@ -159,12 +159,10 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Type</strong>:Game </li>
+                <li><strong>Type</strong>:Game</li>
                 <li>
                   <strong>Repository</strong>:
-                  <a
-                    href="https://github.com/NithishK5/PacMan"
-                    target="_blank"
+                  <a href="https://github.com/NithishK5/PacMan" target="_blank"
                     >Github</a
                   >
                 </li>
@@ -183,7 +181,11 @@
           <div class="portfolio-description">
             <h2>Pacman</h2>
             <p>
-              Pac-Man is an action maze chase video game; the player controls the eponymous character through an enclosed maze. The objective of the game is to eat all of the dots placed in the maze while avoiding four colored ghosts — Blinky (red), Pinky (pink), Inky (cyan), and Clyde (orange) — that pursue him.
+              Pac-Man is an action maze chase video game; the player controls
+              the eponymous character through an enclosed maze. The objective of
+              the game is to eat all of the dots placed in the maze while
+              avoiding four colored ghosts — Blinky (red), Pinky (pink), Inky
+              (cyan), and Clyde (orange) — that pursue him.
             </p>
           </div>
         </div>
