--- a/projects/currency-convertor.html
+++ b/projects/currency-convertor.html
@@ -154,14 +154,15 @@
                 class="img-fluid"
                 alt=""
               />
-          
             </div>
 
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Type</strong>: Currency Convertor Mobile Application</li>
-                
+                <li>
+                  <strong>Type</strong>: Currency Convertor Mobile Application
+                </li>
+
                 <li>
                   <strong>Repository</strong>:
                   <a
