--- a/projects/url-shortner-service.html
+++ b/projects/url-shortner-service.html
@@ -154,14 +154,13 @@
                 class="img-fluid"
                 alt=""
               />
-            
             </div>
 
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Type</strong>: URL Shortner Tool</li>
-              
+
                 <li>
                   <strong>Repository</strong>:
                   <a
@@ -184,9 +183,7 @@
 
           <div class="portfolio-description">
             <h2>URL Shortner Service</h2>
-            <p>
-              URL shortner service is a tool to shorten URL.
-            </p>
+            <p>URL shortner service is a tool to shorten URL.</p>
           </div>
         </div>
       </section>
