update about and cv

--- a/index.html
+++ b/index.html
@@ -175,17 +175,7 @@
           <div class="section-title">
             <h2>About</h2>
             <p class="text-justify">
-              From an early age, I felt that I had a deep connection with
-              computers,I realised it when I was in my 4th grade, compared to
-              other students in my class I felt operating computers was natural
-              in me. That was the starting point of my life which involved
-              computers. From then I started feeling the hunger for learning
-              more about computers and every time I learn something new about it
-              the passion towards computers started increasing. The passion
-              towards computers and the hunger of learning new things made me to
-              pursue a degree in Software Engineering. I'm studying in
-              University of Strathclyde (Year - 4) where I'm learning much more
-              intresting things about computers which I'm proud about!
+              Right from when I can remember, I've felt an intense connection with computers. As a kid, I was fascinated by the mere idea of computers simplifying and completing tasks in just one click. When I was in fourth grade, I could quite easily operate the system compared to my peers. That is when my journey with computers began. Growing up understanding the science behind computers, instilled a profound passion in me to be versed in the study. Since then, I've always had the urge to learn more about computers. The thirst for computers never seemed to be quenched. The more I learn, the more I needed to learn new. This hunger and inquisitiveness pushed me to pursue a degree in Software Engineering. Moreover, realizing the true opportunities that computers provided, I chose computing to be my career. Currently, I'm studying at the University of Strathclyde (year 4) where I'm doing what I always wanted to- mastering computers and many more stimulating things, making myself really proud
               </p>
               <br />
           </div>
