--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <p><em>Rishi's Indian Aroma, Glasgow</em></p>
 
                 <h4>Bartender</h4>
-                <h5>June 2021 - Present</h5>
+                <h5>June 2021 - 2022</h5>
                 <p><em>Chaophraya, Glasgow</em></p>
               </div>
             </div>
