--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@
                 <h4>Bartender</h4>
                 <h5>June 2021 - 2022</h5>
                 <p><em>Chaophraya, Glasgow</em></p>
+                <h4>Bartender</h4>
+                <h5>July 2022 - Present</h5>
+                <p><em>The Social, Glasgow</em></p>
               </div>
             </div>
           </div>
