--- a/index.html
+++ b/index.html
@@ -783,9 +783,14 @@
                   CS412 : Information Access and Mining</a>
                 </li>
                 <li>
-                  <a class="module-links" href="https://local.cis.strath.ac.uk/wp/teaching/undergraduate/syllabuses/cs414/" target="_blank">
+                  <a class="module-links" href="https://local.cis.strath.ac.uk/wp/teaching/undergraduate/syllabuses/#4" target="_blank">
                     <i class="icofont-rounded-right"></i>
-                  CS414 : Digital Forensics</a>
+                  CS420 : Software Engineering</a>
+                </li>
+                <li>
+                  <a class="module-links" href="https://local.cis.strath.ac.uk/wp/teaching/undergraduate/syllabuses/#4" target="_blank">
+                    <i class="icofont-rounded-right"></i>
+                  CS426 : Human-Centred Security</a>
                 </li>
               </ul> 
           
