--- a/index.html
+++ b/index.html
@@ -386,8 +386,10 @@
                 <h5>June 2021 - 2022</h5>
                 <p><em>Chaophraya, Glasgow</em></p>
                 <h4>Bartender</h4>
-                <h5>July 2022 - Present</h5>
+                <h5>July 2022 - September 2022</h5>
                 <p><em>The Social, Glasgow</em></p>
+                <h6>September 2022 - Present</h6>
+                <p><em>Paesano, Glasgow</em></p>
               </div>
             </div>
           </div>
