--- a/index.html
+++ b/index.html
@@ -385,9 +385,12 @@
                 <h4>Bartender</h4>
                 <h5>June 2021 - 2022</h5>
                 <p><em>Chaophraya, Glasgow</em></p>
+
                 <h4>Bartender</h4>
                 <h5>July 2022 - September 2022</h5>
                 <p><em>The Social, Glasgow</em></p>
+                
+                <h4>Waiter</h4>
                 <h6>September 2022 - Present</h6>
                 <p><em>Paesano, Glasgow</em></p>
               </div>
