--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
                   ></i>
                 </li>
                 <li class="list-inline-item">
+                  <i class="devicon-xcode-plain" title="Xcode"></i>
+                </li>
+                <li class="list-inline-item">
                   <i class="fab fa-npm" title="NPM"></i>
                 </li>
               </ul>
@@ -313,6 +316,9 @@
                 </li>
                 <li class="list-inline-item">
                   <i class="devicon-php-plain" title="PHP"></i>
+                </li>
+                <li class="list-inline-item">
+                  <i class="devicon-swift-plain" title="Swift"></i>
                 </li>
               </ul>
             </div>
