--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
           <div class="section-title">
             <h2>About</h2>
             <p class="text-justify">
-              Right from when I can remember, I've felt an intense connection with computers. As a kid, I was fascinated by the mere idea of computers simplifying and completing tasks in just one click. When I was in fourth grade, I could quite easily operate the system compared to my peers. That is when my journey with computers began. Growing up understanding the science behind computers, instilled a profound passion in me to be versed in the study. Since then, I've always had the urge to learn more about computers. The thirst for computers never seemed to be quenched. The more I learn, the more I needed to learn new. This hunger and inquisitiveness pushed me to pursue a degree in Software Engineering. Moreover, realizing the true opportunities that computers provided, I chose computing to be my career. Currently, I'm studying at the University of Strathclyde (year 4) where I'm doing what I always wanted to- mastering computers and many more stimulating things, making myself really proud.
+              My earliest memories are entwined with the fascinating world of computers. The sheer power they wielded in simplifying complex tasks sparked a curiosity within my young mind, embarking me on an accelerated journey where I outshone my contemporaries. As the years rolled by, this juvenile curiosity evolved into an inexhaustible quest for understanding, propelling me towards the academic study of Software Engineering.
+
+Recognizing the vast potential encapsulated within the domain of computing, I decided to weave my career around this enchanting field. Presently, as a final year student at the prestigious University of Strathclyde, I am still driven by my insatiable curiosity, finding profound satisfaction in expanding my understanding of the very technology that ignited my passion.
+
+This odyssey, from an intrigued youngster to a passionate professional-in-making, shapes my enduring affinity for computers and fuels my aspirations in this vibrant digital universe. This narrative is not merely an 'About Me' for my portfolio, it's a testament to a dream that sprung from a childhood fascination and grew into a promising career pathway.
               </p>
               <br />
           </div>
