changes in resume

--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
                 <p>
                   <ul>
                     <li>Direct Entrant to Year 2 of the Degree</li>
+                    <li>Developed a cross-platform mobile application using React Native, JavaScript, Node.js and additional libraries, aimed at enhancing women's safety by providing real-time crime data in the UK, thus empowering users with critical information when venturing into unfamiliar locations.</li>
                   </ul>
                 </p>
               </div>
