--- a/index.html
+++ b/index.html
@@ -344,11 +344,12 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>BSc (Hons) Software Engineering</h4>
-                <h5>September 2019 - Present</h5>
+                <h5>September 2019 - October 2023</h5>
                 <p><em>University of Strathclyde, Glasgow</em></p>
                 <p>
                   <ul>
                     <li>Direct Entrant to Year 2 of the Degree</li>
+                    <li>Successfully completed a year-long industrial placement in the fourth year of my studies, providing invaluable industry exposure and the opportunity to apply academic learning within a professional, real-world context.</li>
                     <li>Developed a cross-platform mobile application using React Native, JavaScript, Node.js and additional libraries, aimed at enhancing women's safety by providing real-time crime data in the UK, thus empowering users with critical information when venturing into unfamiliar locations.</li>
                   </ul>
                 </p>
@@ -448,7 +449,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
           </div>
         </div>
       </section>
-      < End Certifications Section --> -->
+      < End Certifications Section --> 
 
 
       <!-- ======= Portfolio Section ======= -->
@@ -797,11 +798,6 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
                   <a class="module-links" href="https://local.cis.strath.ac.uk/wp/teaching/undergraduate/syllabuses/cs412/" target="_blank">
                     <i class="icofont-rounded-right"></i>
                   CS412 : Information Access and Mining</a>
-                </li>
-                <li>
-                  <a class="module-links" href="https://local.cis.strath.ac.uk/wp/teaching/undergraduate/syllabuses/#4" target="_blank">
-                    <i class="icofont-rounded-right"></i>
-                  CS420 : Software Engineering</a>
                 </li>
                 <li>
                   <a class="module-links" href="https://local.cis.strath.ac.uk/wp/teaching/undergraduate/syllabuses/#4" target="_blank">
