--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-mob">Mobile</li>
-                <li data-filter=".filter-web">Web</li>
-                <li data-filter=".filter-other">Other</li>
+                <li data-filter=".filter-web">JavaScript</li>
+                <li data-filter=".filter-other">Java</li>
               </ul>
             </div>
           </div>
