--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
 
 
       <!-- ======= Portfolio Section ======= -->
-      <section id="projects" class="portfolio">
+      <!-- <section id="projects" class="portfolio">
         <div class="container">
           <div class="section-title">
             <h2>Projects</h2>
@@ -632,7 +632,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
           </div>
           
         </div>
-      </section>
+      </section> -->
       <!-- End Portfolio Section -->
 
       <!-- ======= University Modules Section ======= -->
