--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Nithish Kumar Megarajan</title>
     <meta content="Nithish Kumar is a Software Engineer based in Glasgow, who specializes in developing applications." name="description" />
     <meta
-      content="Nithish Kumar, Glasgow, software engineer, Nithish Kumar Porfolio, Nithish Kumar Resume, Nithish Kumar Software Engineer, Nithish Kumar Portfolio, Nithish Kumar Glasgow"
+      content="Nithish Kumar, Glasgow, software engineer, Nithish Kumar Portfolio, Nithish Kumar Resume, Nithish Kumar Software Engineer, Nithish Kumar Portfolio, Nithish Kumar Glasgow"
       name="keywords"
     />
 
@@ -83,6 +83,7 @@
             src="assets/img/profile-img.jpg"
             alt="Profile Picture"
             class="img-fluid"
+            
           />
           <h1 class="text-light text-center"><a href="index.html">Nithish Kumar</a></h1>
           <div class="social-links mt-3 text-center">
