--- a/index.html
+++ b/index.html
@@ -399,6 +399,17 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
                 <h5>June 2021 - 2022</h5>
                 <p><em>Chaophraya, Glasgow</em></p>
 
+                <h4>Software Engineer (Intern) Remote</h4>
+                <h5>2021 - 2022</h5>
+                <p><em>SMT, India</em>
+                  <ul>
+                    <li>Streamlined user support by responding to inquiries within Web Apps and CRM using AI, reducing reliance on human agents.</li>
+                    <li>Enhanced system efficiency by designing Python scripts and stored procedures, optimizing data retrieval and processing.</li>
+                    <li>Applied LSTM recurrent neural networks to classify user input, elevating analytical skills and contributing to responsive
+                      AI-driven interactions.</li>
+                  </ul>
+                </p>
+
                 <h4>Bartender</h4>
                 <h5>July 2022 - September 2022</h5>
                 <p><em>The Social, Glasgow</em></p>
