--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>BSc (Hons) Software Engineering</h4>
-                <h5>September 2019 - October 2023</h5>
+                <h5>September 2019 - May 2024</h5>
                 <p><em>University of Strathclyde, Glasgow</em></p>
                 <p>
                   <ul>
@@ -368,7 +368,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
                 </p>
               </div>
               <div class="resume-item">
-                <h4>Central Board Of Secondary Education (CBSC)</h4>
+                <h4>Central Board Of Secondary Education (CBSE)</h4>
                 <h5>June 2016 - June 2018</h5>
                 <p>
                   <em>The Velammal International School, Chennai, India.</em>
