--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ This odyssey, from an intrigued youngster to a passionate professional-in-making
                 <p><em>University of Strathclyde, Glasgow</em></p>
                 <p>
                   <ul>
-                    <li>Direct Entrant to Year 2 of the Degree</li>
+                    <!-- <li>Direct Entrant to Year 2 of the Degree</li> -->
                     <li>Successfully completed a year-long industrial placement in the fourth year of my studies, providing invaluable industry exposure and the opportunity to apply academic learning within a professional, real-world context.</li>
                     <li>Developed a cross-platform mobile application using React Native, JavaScript, Node.js and additional libraries, aimed at enhancing women's safety by providing real-time crime data in the UK, thus empowering users with critical information when venturing into unfamiliar locations.</li>
                   </ul>
